--- a/nordichomes/core/templates/core/frontpage.html
+++ b/nordichomes/core/templates/core/frontpage.html
@@ -10,11 +10,14 @@
 
 <div class="max-w-6xl mx-auto py-2 px-6 xl:px-0">
     <div class="products flex items-center flex-wrap">
+        {% for product in products %}
         <div class="w-full md:w-1/3 xl:w-1/4 p-6">
             <a href="#">
-                <img class="rounded-xl hover:shadow-lg" src="">
+                <img class="rounded-xl hover:shadow-lg">
+            </a>
+
             <div class="pt-3 flex items-center justify-between">
-                <a href="#">Nome do produto</a>
+                <a href="#">{{product.name}}</a>
 
                 <a href="#" class="text-purple-500 hover:text-purple-800">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -25,6 +28,7 @@
 
             <p class="pt-1 text-gray-400">R$9.00</p>
         </div>
+        {% endfor %}
      <div class="w-full md:w-1/3 xl:w-1/4 p-6">
             <a href="#">
                 <img class="rounded-xl hover:shadow-lg" src="">
