criar barra pesquisa, criar pagina html produto

--- a/nordichomes/core/templates/core/base.html
+++ b/nordichomes/core/templates/core/base.html
@@ -13,7 +13,7 @@
                 <a href="#"class="py-4 text-lg text-purple-500 font-semibold">Norte Homes</a>
 
             <ul class="flex items-center space-x-4">
-                <li><a href="#">shop</a></li>
+                <li><a href="{% url 'shop' %}">shop</a></li>
                 <li><a href="#">Sobre</a></li>
             </ul>
             </div>
@@ -50,9 +50,9 @@
                 <h2 class="mb-5 uppercase text-lg">social links</h2>
 
                 <ul class="space-y-2">
-                    <li><a href="#" class="text-purple-500 hover:text-purple-800"><a/>Facebook</li>
-                    <li><a href="#" class="text-purple-500 hover:text-purple-800"><a/>Xwitter</li>
-                    <li><a href="#" class="text-purple-500 hover:text-purple-800"><a/>Insta</li> 
+                    <li><a href="#" class="text-purple-500 hover:text-purple-800">Facebook</a></li>
+                    <li><a href="#" class="text-purple-500 hover:text-purple-800">Xwitter</a></li>
+                    <li><a href="#" class="text-purple-500 hover:text-purple-800">Insta</a></li> 
                 </ul>
             </div>
         </div>
