--- a/nordichomes/core/templates/core/shop.html
+++ b/nordichomes/core/templates/core/shop.html
@@ -5,9 +5,9 @@
     <div class="filters w-full lg:w-1/4">
         <h3 class="mb-3 text-xl uppercase">Pesquisar</h3>
 
-        <form>
+        <form method="get" action=".">
             <div class="flex">
-            <input type="text" class="p-4 bg-gray-100 border-0" placeholder="search...">
+            <input type="text" name="query" class="p-4 bg-gray-100 border-0" placeholder="search...">
             
             <button class="p-4 bg-gray-100 border-0">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -20,10 +20,12 @@
          <h3 class="mt-6 mb-3 text-xl uppercase">Categorias</h3>
 
          <ul class="space-y-2">
-            <li><a href="#" class="text-purple-500">Todas categorias</li>
-            <li><a href="#" class="text-gray-500">sofa</li>
-            <li><a href="#" class="text-gray-500">beds</li>
-            <li><a href="#" class="text-gray-500">tables</li>
+            <li><a href="{% url 'shop' %}" class="{% if not active_category %}text-purple-500{% else %}text-gray-500{% endif %}">Todas as categorias</a></li>
+
+            {% for category in categories %}
+                <li><a href="{% url 'shop' %}?category={{ category.slug }}" class="{% if category.slug == active_category %}text-purple-500{% else %}text-gray-500{% endif %}">{{ category.name }}</a></li>
+            {% endfor %}
+            
          </ul>
     </div>
 
