--- a/nordichomes/product/templates/product/product.html
+++ b/nordichomes/product/templates/product/product.html
@@ -16,8 +16,12 @@
         {{ product.description }}
         </p>
         {% endif %}
-        <a href="#" class="mt-6 inline-block px-8 py-4 rounded-xl bg-purple-500 text-white hover:bg-purple-700">
-        add to cart
+        <a href="#" 
+        class="mt-6 inline-block px-8 py-4 rounded-xl bg-purple-500 text-white hover:bg-purple-700"
+        hx-get="{% url 'add_to_cart' product.id %}"
+        hx-target="#menu-cart-button"
+        hx-swap="outerHTML">
+        Adicionar ao carrinho
         </a>
     </div>
 </div>
