configurar html para pagina de sign up, configurar html para pagina de log in, adicionar imagens aos produtos

--- a/nordichomes/product/templates/product/product.html
+++ b/nordichomes/product/templates/product/product.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="max-w-6xl mx-auto flex flex-wrap py-6 px-6 xl:px-0">
     <div class="images w-full mb-6 lg:mb-0 lg:w-3/5">
-        <img class="rounded-xl" src="1.jpg">
+        <img class="rounded-xl" src="{{ product.image.url }}">
     </div>
 
     <div class="information w-full lg:w-2/5 lg:p-6">
