--- a/nordichomes/core/templates/core/frontpage.html
+++ b/nordichomes/core/templates/core/frontpage.html
@@ -4,7 +4,7 @@
             <div class="max-w-3xl mx-auto text-center">
                 <p class="mb-2 text-3xl lg:text-5xl text-white">Bem-vindo à Norte Home</p>
 
-                <p class="mb-10 text-white">Móveis de qualidade para sua casa</p>
+                <p class="mb-10 text-white">Móveis de qualidade para o seu lar</p>
                 <a href="#" class="inline-block px-8 py-4 rounded-xl bg-white text-purple-500 hover:bg-gray-200">Comece a comprar</a>
 </header>
 
