--- a/nordichomes/core/templates/core/shop.html
+++ b/nordichomes/core/templates/core/shop.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-<div class="max-w-6xl mx-auto flex felx-wrap items-start py-6 px-6 xl:px-0">   
+<div class="max-w-6xl mx-auto flex flex-wrap items-start py-6 px-6 xl:px-0">   
     <div class="filters w-full lg:w-1/4">
         <h3 class="mb-3 text-xl uppercase">Pesquisar</h3>
 
