--- a/nordichomes/core/templates/core/base.html
+++ b/nordichomes/core/templates/core/base.html
@@ -15,6 +15,15 @@
             <ul class="flex items-center space-x-4">
                 <li><a href="{% url 'shop' %}">shop</a></li>
                 <li><a href="#">Sobre</a></li>
+            
+                {% if request.user.is_authenticated %}
+                <li>
+                    <form action="{% url 'logout' %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit" class="logout-button">Logout</button>
+                    </form>
+                </li>
+                {% endif %}
             </ul>
             </div>
             <div class="menu-right flex items-center space-x-4">
