--- a/nordichomes/core/templates/core/frontpage.html
+++ b/nordichomes/core/templates/core/frontpage.html
@@ -1,8 +1,11 @@
 {% extends 'core/base.html' %}
+
+{% block title %}Bem-vindo{% endblock %}
+
 {% block content %}
 <header class="px-6 py-10 lg:py-20 bg-purple-500">
             <div class="max-w-3xl mx-auto text-center">
-                <p class="mb-2 text-3xl lg:text-5xl text-white">Bem-vindo à Norte Home</p>
+                <p class="mb-2 text-3xl lg:text-5xl text-white">Bem-vindo à Norte Homes</p>
 
                 <p class="mb-10 text-white">Móveis de qualidade para o seu lar</p>
                 <a href="#" class="inline-block px-8 py-4 rounded-xl bg-white text-purple-500 hover:bg-gray-200">Comece a comprar</a>
