--- a/nordichomes/cart/templates/cart/cart.html
+++ b/nordichomes/cart/templates/cart/cart.html
@@ -4,49 +4,30 @@
 
 {% block content %}
 <div class="max-w-6xl mx-auto flex flex-wrap items-start py-6 px-6 xl:px-0">  
-    <div class="product w-full lg:w-3/4">
-        <div class="product mb-6 flex pr-6">
-            <a href="#" class="w-1/4">
-                <img class="hover:shadow-lg rounded-xl" src="1.jpg">
-            </a>
+    <div class="products w-full lg:w-3/4">
+        {% for item in cart %}
+            <div class="product mb-6 flex pr-6">
+                <a href="#" class="w-1/4">
+                    <img class="hover:shadow-lg rounded-xl" src="{{ item.product.get_thumbnail }}">
+                </a>
 
-            <div class="w-3/4 pl-6">
-                <div class="flex justify-between">
-                    <a href="#" class="text-lg">Nome do produto</a>
-                    <span class="mb-6 pt-1 text-gray-400">$9.99</span>
-                </div>
+                <div class="w-3/4 pl-6">
+                    <div class="flex justify-between">
+                        <a href="#" class="text-lg">{{ item.product.name }}</a>
 
-                <hr>
+                        <span class="mb-6 pt-1 text-gray-400">${{ item.total_price }}</span>
+                    </div>
 
-                <div class="quantity mt-6 flex items-center space-x-4">
-                    <a href="#" class="p-3 bg-gray-100">-</a>
-                    <span>2</span>
-                    <a href="#" class="p-3 bg-gray-100">+</a>
-                </div>
-            </div>
-        </div>
+                    <hr>
 
-        <!-- Conteúdo do segundo produto ... -->
-        <div class="product mb-6 flex pr-6">
-            <a href="#" class="w-1/4">
-                <img class="hover:shadow-lg rounded-xl" src="2.jpg">
-            </a>
-
-            <div class="w-3/4 pl-6">
-                <div class="flex justify-between">
-                    <a href="#" class="text-lg">Nome do segundo produto</a>
-                    <span class="mb-6 pt-1 text-gray-400">$19.99</span>
-                </div>
-
-                <hr>
-
-                <div class="quantity mt-6 flex items-center space-x-4">
-                    <a href="#" class="p-3 bg-gray-100">-</a>
-                    <span>2</span>
-                    <a href="#" class="p-3 bg-gray-100">+</a>
+                    <div class="quantity mt-6 flex items-center space-x-4">
+                        <a href="#" class="p-3 bg-gray-100">-</a>
+                        <span>{{ item.quantity }}</span>
+                        <a href="#" class="p-3 bg-gray-100">+</a>
+                    </div>
                 </div>
             </div>
-        </div>
+        {% endfor %}
     </div>
 
     <div class="summary w-1/4 p-6 bg-gray-100 rounded-xl mt-3">
@@ -54,9 +35,9 @@
         <h2 class="uppercase text-lg mb-5">Sumário</h2>
         <div class="mb-6 flex justify-between">
             <span class="font-semibold">Total</span>
-            <span>$29.99</span>
+            <span>${{ cart.get_total_cost }}</span>
         </div>
-        <a href="#" class="inline-block px-8 py-4 rounded-xl bg-purple-500 hover:bg-purple-700 text-white">Checkout</a>
+        <a href="{% url 'checkout' %}" class="inline-block px-8 py-4 rounded-xl bg-purple-500 hover:bg-purple-700 text-white">Checkout</a>
     </div>
 </div>
 {% endblock %}
