--- a/nordichomes/core/templates/core/base.html
+++ b/nordichomes/core/templates/core/base.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="menu-right flex items-center space-x-4">
-                <a href="{% url 'login' %}">
+                <a href="{% url 'myaccount' %}">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
                         class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
